# NadcoSoccerSim2DTeam

./: README.md
agent-2.1.0/: AUTHORS  ChangeLog  Makefile.in  NEWS  NEWS.en  README  aclocal.m4  config.h.in  configure  configure.ac
agent-2.1.0/src/: Makefile.am  Makefile.in  Options.conf  bhv_after_goal.cpp  bhv_after_goal.h  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  bhv_basic_tackle.cpp  bhv_basic_tackle.h  bhv_before_kick_off.cpp  bhv_before_kick_off.h  bhv_best_action.cpp  bhv_best_action.h  bhv_block.cpp  bhv_block.h  bhv_block2.cpp  bhv_block2.h  bhv_cross_kick.cpp  bhv_cross_kick.h  bhv_cross_move.cpp  bhv_cross_move.h  bhv_danger_area_tackle.cpp  bhv_danger_area_tackle.h  bhv_danger_kick.cpp  bhv_danger_kick.h  bhv_danger_move.cpp  bhv_danger_move.h  bhv_defense_breaker.cpp  bhv_defense_breaker.h  bhv_dribble_kick.cpp  bhv_dribble_kick.h  bhv_dribble_move.cpp  bhv_dribble_move.h  bhv_dribble_target_calculator.cpp  bhv_dribble_target_calculator.h  bhv_dribble_target_calculator2.cpp  bhv_dribble_target_calculator2.h  bhv_global_positioning.cpp  (+165 more)
agent-2.1.0/src/formations-dt/: before-kick-off.conf  defense-formation.conf  goal-kick-our.conf  goalie-catch-opp.conf  goalie-catch-our.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  kickin-our-formation.conf  normal-formation.conf  normal2-formation.conf  offense-formation.conf  setplay-opp-formation.conf  setplay-our-formation.conf
librcsc-4.0.0/: -march=i686  ChangeLog  NEWS  NEWS.en  aclocal.m4  configure  configure.ac
librcsc-4.0.0/rcsc/: Makefile.am  Makefile.in  factory.h  version.h
librcsc-4.0.0/rcsc/action/: basic_actions.cpp  bhv_emergency.cpp  bhv_scan_field.cpp  body_advance_ball2009.cpp  body_clear_ball2009.cpp  body_dribble2008.cpp  body_go_to_point_dodge.cpp  body_hold_ball2008.cpp  body_kick_collide_with_ball.cpp  body_kick_to_relative.cpp  body_stop_ball.cpp  intention_dribble2008.cpp  intention_time_limit_action.cpp  kick_table.cpp  neck_scan_field.cpp  neck_scan_players.cpp  neck_turn_to_ball_and_player.cpp  neck_turn_to_ball_or_scan.cpp  neck_turn_to_goalie_or_scan.cpp  neck_turn_to_low_conf_teammate.cpp  neck_turn_to_player_or_scan.cpp  view_synch.cpp
librcsc-4.0.0/rcsc/coach/: Makefile.am  Makefile.in  coach_agent.cpp  coach_audio_sensor.cpp  coach_command.cpp  global_world_model.cpp  global_world_model.h  player_type_analyzer.cpp
librcsc-4.0.0/rcsc/common/: Makefile.am  Makefile.in  audio_codec.cpp  audio_memory.cpp  player_param.cpp  player_type.cpp  player_type.h  say_message_parser.cpp  server_param.cpp  soccer_agent.cpp  stamina_model.cpp  team_graphic.cpp
librcsc-4.0.0/rcsc/formation/: sample_data.cpp
librcsc-4.0.0/rcsc/geom/: Makefile.am  Makefile.in  composite_region_2d.cpp  delaunay_triangulation.cpp  polygon_2d.cpp  vector_2d.h
librcsc-4.0.0/rcsc/param/: cmd_line_parser.cpp  param_map.cpp  rcss_param_parser.cpp
librcsc-4.0.0/rcsc/player/: abstract_player_object.cpp  action_effector.cpp  audio_sensor.cpp  ball_object.cpp  freeform_parser.cpp  fullstate_sensor.cpp  intercept_table.cpp  localization_default.cpp  localization_pfilter.cpp  player_agent.cpp  say_message_builder.cpp
librcsc-4.0.0/rcsc/trainer/: trainer_agent.cpp
librcsc-4.0.0/rcsc/util/: version.cpp
