## Process this file with automake to produce Makefile.in

PLAYERSOURCES = \
	bhv_spread_positioning.cpp \
	body_leading_pass2.cpp \
	body_tackle.cpp \
	bhv_block2.cpp \
	body_direct_pass2.cpp \
	body_through_pass2.cpp \
	bhv_dribble_target_calculator2.cpp \
	options.cpp \
	bhv_predictor.cpp \
	body_kick_to_center.cpp \
	sample_communication.cpp \
	intention_receive.cpp \
	view_tactical.cpp \
	bhv_dribble_target_calculator.cpp \
	bhv_through_pass_cut.cpp \
	bhv_best_action.cpp \
	body_long_dribble.cpp \
	bhv_goalie.cpp \
	bhv_hassle.cpp \
	bhv_offside_trap.cpp \
	bhv_opponent_strategy_learning.cpp \
	body_intercept.cpp \
	neck_chase_ball.cpp \
	shoot_table.cpp \
	bhv_defense_breaker.cpp \
	bhv_global_positioning.cpp \
	bhv_goal_patterns.cpp \
	bhv_statistical_learning.cpp \
	bhv_tactics.cpp \
	body_selection_pass.cpp \
	bhv_before_kick_off.cpp \
	body_go_to_point.cpp \
	body_kick_one_step.cpp \
	body_kick_two_step.cpp \
	body_kick_multi_step.cpp \
	body_smart_kick.cpp \
	bhv_mark.cpp \
	bhv_block.cpp \
	bhv_offensive_planner.cpp \
	body_shoot.cpp \
	body_dribble.cpp \
	body_dash.cpp \
	body_clear_ball.cpp \
	bhv_set_play_corner_kick.cpp \
	bhv_set_play_goalie_catch.cpp \
	bhv_set_play_offside.cpp \
	bhv_set_play_backpass.cpp \
	bhv_offmid_defmid_kick.cpp \
	bhv_offmid_defmid_move.cpp \
	bhv_dribble_kick.cpp \
	bhv_dribble_move.cpp \
	bhv_cross_kick.cpp \
	bhv_cross_move.cpp \
	bhv_danger_kick.cpp \
	bhv_danger_move.cpp \
	bhv_shootchance_kick.cpp \
	bhv_shootchance_move.cpp \
	body_direct_pass.cpp \
	body_pass.cpp \
	body_leading_pass.cpp \
	body_through_pass.cpp \
	bhv_after_goal.cpp \
	bhv_basic_move.cpp \
	bhv_basic_offensive_kick.cpp \
	bhv_basic_tackle.cpp \
	bhv_danger_area_tackle.cpp \
	bhv_go_to_static_ball.cpp \
	bhv_goalie_basic_move.cpp \
	bhv_goalie_chase_ball.cpp \
	bhv_goalie_free_kick.cpp \
	bhv_pre_process.cpp \
	bhv_prepare_set_play_kick.cpp \
	bhv_set_play.cpp \
	bhv_set_play_free_kick.cpp \
	bhv_set_play_goal_kick.cpp \
	bhv_set_play_indirect_free_kick.cpp \
	bhv_set_play_kick_in.cpp \
	bhv_set_play_kick_off.cpp \
	bhv_their_goal_kick_move.cpp \
	bhv_penalty_kick.cpp \
	body_kick_to_corner.cpp \
	neck_goalie_turn_neck.cpp \
	role_center_back.cpp \
	role_center_forward.cpp \
	role_defensive_half.cpp \
	role_goalie.cpp \
	role_offensive_half.cpp \
	role_side_back.cpp \
	role_side_forward.cpp \
	sample_player.cpp \
	soccer_role.cpp \
	strategy.cpp \
	sample_coach.cpp \
	main.cpp

PLAYERHEADERS = \
	bhv_spread_positioning.cpp \
	body_leading_pass2.h \
	body_tackle.h \
	bhv_block2.h \
	body_direct_pass2.h \
	body_through_pass2.h \
	bhv_dribble_target_calculator2.h \
	options.h \
	bhv_predictor.h \
	body_kick_to_center.h \
	sample_communication.h \
	communication.h \
	intention_receive.h \
	view_tactical.h \
	bhv_dribble_target_calculator.h \
	bhv_through_pass_cut.h \
	bhv_best_action.h \
	body_long_dribble.h \
	bhv_goalie.h \
	bhv_hassle.h \
	bhv_offside_trap.h \
	bhv_opponent_strategy_learning.h \
	body_intercept.h \
	neck_chase_ball.h \
	shoot_table.h \
	bhv_defense_breaker.h \
	bhv_global_positioning.h \
	bhv_goal_patterns.h \
	bhv_statistical_learning.h \
	bhv_tactics.h \
	body_selection_pass.h \
	bhv_before_kick_off.h \
	body_go_to_point.h \
	body_kick_one_step.h \
	body_kick_two_step.h \
	body_kick_multi_step.h \
	body_smart_kick.h \
	bhv_mark.h \
	bhv_block.h \
	bhv_offensive_planner.h \
	body_shoot.h \
	body_dribble.h \
	body_dash.h \
	body_clear_ball.h \
	bhv_set_play_corner_kick.h \
	bhv_set_play_goalie_catch.h \
	bhv_set_play_offside.h \
	bhv_set_play_backpass.h \
	bhv_offmid_defmid_kick.h \
	bhv_offmid_defmid_move.h \
	bhv_dribble_kick.h \
	bhv_dribble_move.h \
	bhv_cross_kick.h \
	bhv_cross_move.h \
	bhv_danger_kick.h \
	bhv_danger_move.h \
	bhv_shootchance_kick.h \
	bhv_shootchance_move.h \
	body_direct_pass.h \
	body_pass.h \
	body_leading_pass.h \
	body_through_pass.h \
	bhv_after_goal.h \
	bhv_basic_move.h \
	bhv_basic_offensive_kick.h \
	bhv_basic_tackle.h \
	bhv_danger_area_tackle.h \
	bhv_go_to_static_ball.h \
	bhv_goalie_basic_move.h \
	bhv_goalie_chase_ball.h \
	bhv_goalie_free_kick.h \
	bhv_pre_process.h \
	bhv_prepare_set_play_kick.h \
	bhv_set_play.h \
	bhv_set_play_free_kick.h \
	bhv_set_play_goal_kick.h \
	bhv_set_play_indirect_free_kick.h \
	bhv_set_play_kick_in.h \
	bhv_set_play_kick_off.h \
	bhv_their_goal_kick_move.h \
	bhv_penalty_kick.h \
	body_kick_to_corner.h \
	neck_goalie_turn_neck.h \
	role_center_back.h \
	role_center_forward.h \
	role_defensive_half.h \
	role_goalie.h \
	role_offensive_half.h \
	role_side_back.h \
	role_side_forward.h \
	sample_player.h \
	soccer_role.h \
	strategy.h \
	sample_coach.h

noinst_PROGRAMS = sample_player

noinst_DATA = \
	reconnect.sh.in \
	start.sh.in \
	train.sh.in \
	coach.conf \
	player.conf \
	team_logo.xpm \
	formations-dt/before-kick-off.conf \
	formations-dt/goal-kick-opp.conf \
	formations-dt/goal-kick-our.conf \
	formations-dt/goalie-catch-opp.conf \
	formations-dt/goalie-catch-our.conf \
	formations-dt/goalie-formation.conf \
	formations-dt/indirect-freekick-opp-formation.conf \
	formations-dt/indirect-freekick-our-formation.conf \
	formations-dt/kickin-our-formation.conf \
	formations-dt/normal-formation.conf \
	formations-dt/setplay-opp-formation.conf \
	formations-dt/setplay-our-formation.conf \

sample_player_SOURCES = \
	$(PLAYERSOURCES)

noinst_HEADERS = \
	$(PLAYERHEADERS)

AM_CPPFLAGS =
AM_CFLAGS = -Wall
AM_CXXFLAGS = -Wall
AM_LDLAGS =

CLEANFILES = core *~

DISTCLEANFILES = start.sh train.sh

EXTRA_DIST = $(noinst_DATA) \
	start-debug.sh \
	start-offline.sh
